[package]
name = "htpasswd"
version = "0.1.0"
authors = ["kenkyu392 <57144941+kenkyu392@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Apache htpasswd parser"
repository = "https://github.com/kenkyu392/htpasswd-rs"
keywords = ["htpasswd", "apache", "password"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
